# 05-chat

./: Cargo.toml
chat_server/: Cargo.toml  app.yml  readme.md  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/src/: config.rs  error.rs  lib.rs
chat_server/src/handlers/: auth.rs
chat_server/src/middlewares/: request_id.rs  server_time.rs
chat_server/src/models/: mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240804032323_initial.sql  20240819012754_workspace.sql
notify_server/: Cargo.toml  index.html
src/: config.rs
src/handlers/: chat.rs  messages.rs
